# rustyzip

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api-reference.md  index.md  installation.md  quickstart.md
docs/guide/: file-operations.md  memory-operations.md  security.md  streaming.md
docs/migration/: pyminizip.md
python/rustyzip/: __init__.py  compat.py
python/rustyzipper/: __init__.py  exceptions.py
python/tests/: conftest.py  test_compression.py  test_inspection.py  test_modification.py  test_pyminizip_compat.py
src/: compression.rs  error.rs  lib.rs
src/bindings/: compat.rs  exceptions.rs  file_ops.rs  inspection.rs  mod.rs  modification.rs
src/compression/: builder.rs  decompression.rs  handle.rs  inspection.rs  mod.rs  modification.rs  parallel.rs  security.rs  sequential.rs  tests.rs  types.rs
src/stream/: mod.rs  reader.rs  writer.rs
