[package]
name = "rustyzip"
version = "1.0.0"
edition = "2021"
description = "A high-performance, secure file compression library with password protection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/johnnywalee/rustyzip"
keywords = ["zip", "compression", "encryption", "aes", "python"]
categories = ["compression", "cryptography"]

[lib]
name = "rustyzip"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Compression
zip = { version = "2.0", default-features = false, features = ["deflate", "aes-crypto", "time", "zstd"] }
flate2 = "1.0"

# Cryptography (for additional crypto operations if needed)
rand = "0.8"

# Error handling
thiserror = "1.0"

# Directory traversal
walkdir = "2.4"

# Glob pattern matching
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
